fixed alignment

--- a/mainPage/style.css
+++ b/mainPage/style.css
@@ -6,6 +6,7 @@ body,html {
 
 #logo{
     padding-top: 20px;
+    margin-left: 3px;
 }
 
 #export-html-container{
@@ -13,6 +14,7 @@ body,html {
     background-color: whitesmoke;
     border: 1px solid #d7d7d7;
     text-align: right;
+    margin-left: 3px;
 }
 
 #sidebar {
@@ -20,7 +22,7 @@ body,html {
     width: 380px;
     top: 11%;
     min-height: 120%;
-    left: 0px;
+    left: 0.5%;
     background: #ffffff;
     border: 1px solid #d7d7d7;
     background-color: whitesmoke;
